--- a/app/styles/nightmode.sass
+++ b/app/styles/nightmode.sass
@@ -13,3 +13,15 @@ body
   &:hover,
   &:focus
     color: #dddddd
+
+#loading-spinner
+  color: #dddddd
+
+.blog-posts
+  color: white
+  &:hover,
+  &:visited
+    color: white
+
+.blog-subtitles
+  color: #dddddd
