--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -182,6 +182,7 @@ img
   margin-bottom: 10px
   cursor: pointer
   display: flex
+  flex-direction: row-reverse
   align-items: center
   justify-content: center
   overflow: hidden
@@ -197,6 +198,9 @@ img
 
   &:hover
     background-color: rgba($color-gothic, 0.2)
+
+  &:visited
+    background-color: none
 
 .project-image
   opacity: 0
@@ -288,6 +292,12 @@ img
 
 
 @media screen and (max-width: 991px)
+  body
+    padding-top: 0px
+
+  #app-container
+    position: relative
+    overflow-x: hidden
   .social-list
     border-right: none
     border-top: 1px solid gray
@@ -301,6 +311,15 @@ img
       text-align: center
       a
         font-size: 1.25rem
+
+  .project-item
+    &:hover,
+    &:visited
+      background-color: transparent
+
+  .project-image
+    opacity: 1
+
   .blog-posts
     display: inline-block
     width: 50%
@@ -318,6 +337,18 @@ img
     font-size: 2rem
 
 @media screen and (max-width: 736px)
+  .project-item
+    flex-direction: column
+    .project-image
+      max-height: 150px
+      overflow-y: hidden
+      display: flex
+      align-items: center
+      margin-bottom: 10px
+      margin-top: 10px
+      border-radius: 5px
+      padding-left: 0
+
   .ribbon
     right: -60px
     top: 10px
