blog load error handling

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -247,6 +247,12 @@ img
     .l-10
       animation-delay: 1.56s
 
+  .error
+    .blog-titles,
+    .blog-descriptions
+      a
+        color: $color-fruit-salad
+
 .blog-posts
   padding-top: 10px
   padding-bottom: 10px
