--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -222,30 +222,30 @@ img
     font-size: 2.5rem
     .letter
       animation-name: loadingFade
-      animation-duration: 1.6s
+      animation-duration: 1.5s
       animation-iteration-count: infinite
       animation-direction: linear
       display: inline-block
     .l-1
-      animation-delay: 0.48s
+      animation-delay: 0.15s
     .l-2
-      animation-delay: 0.6s
+      animation-delay: 0.3s
     .l-3
-      animation-delay: 0.72s
+      animation-delay: 0.45s
     .l-4
-      animation-delay: 0.84s
+      animation-delay: 0.6s
     .l-5
-      animation-delay: 0.96s
+      animation-delay: 0.75s
     .l-6
-      animation-delay: 1.08s
+      animation-delay: .9s
     .l-7
-      animation-delay: 1.2s
+      animation-delay: 1.05s
     .l-8
-      animation-delay: 1.32s
+      animation-delay: 1.2s
     .l-9
-      animation-delay: 1.44s
+      animation-delay: 1.35s
     .l-10
-      animation-delay: 1.56s
+      animation-delay: 1.5s
 
   .error
     .blog-titles,
