--- a/gatsby/src/layouts/index.sass
+++ b/gatsby/src/layouts/index.sass
@@ -32,353 +32,155 @@ $color-complement-4: #5D1101
 *,
 *::before,
 *::after
-  box-sizing: border-box
+    box-sizing: border-box
 
 body
-  padding: 15px
-  animation: fade-in 2s ease-in-out
-  opacity: 1
-  overflow-x: hidden
-
-img
-  max-width: 100%
-
-@keyframes fade-in
-  0%
-    opacity: 0
-
-  100%
+    padding: 15px
+    animation: fade-in 2s ease-in-out
     opacity: 1
-
-@keyframes slide
-  0%
-    left: 100%
-
-  100%
-    left: 0
-
-@keyframes slideRight
-  0%
-    left: 0
-
-  100%
-    left: 100%
-
-@keyframes slideUp
-  0%
-    opacity: 0
-    transform: translate3d(0, 50%, 0)
-
-  100%
-    opacity: 1
-    transform: translate3d(0, 0, 0)
-
-@keyframes loadingFade
-  0%
-    opacity: 0
-  100%
-    opacity: 1
-
-
-.ribbon
-  width: 175px
-  padding: 10px
-  padding-left: 40px
-  padding-right: 40px
-  position: absolute
-  text-align: center
-  transform: rotate(45deg)
-  right: -50px
-  top: 15px
-
-  &.night-mode
-    background-color: $color-blue-whale
-    color: #f0f0f0
-
-  &.day-mode
-    background-color: #f0f0f0
-    color: $color-blue-whale
-    display: none
-
-  cursor: pointer
-  z-index: 100
-
-.link
-  color: $color-fruit-salad
-  cursor: pointer
-
-  &:hover
-    color: $color-sea-green
-
-.slide
-  animation: slide 0.5s forwards
-
-.slide-right
-  animation: slideRight 0.5s forwards
-
-.header
-  display: flex
-  align-items: center
-  margin-bottom: 20px
-
-.name-container,
-.headshot-container
-  display: flex
-  align-items: center
-  justify-content: center
-
-.name-container
-  overflow: hidden
-
-.name
-  padding-left: 15px
-  margin-top: 0px
-  font-size: 2.5em
-  font-family: "Futura", "Montserrat", sans-serif
-  text-transform: uppercase
-  animation: slideUp 0.5s forwards
-  animation-delay: 1s
-  opacity: 0
-
-.headshot
-  border-radius: 100%
-  height: 100px
-  width: 100px
-
-.social-list
-  border-right: 1px solid gray
-
-  .social-list-items
-    a
-      color: black
-      text-decoration: none
-      cursor: pointer
-      font-weight: bold
-      font-family: "Lato"
-      font-size: 1.75rem
-
-
-.heading
-  font-weight: bold
-  font-family: "Futura", "Montserrat"
-  text-transform: uppercase
-  margin-bottom: 10px
-  margin-top: 10px
-  font-size: 2rem
-
-.descriptions
-  font-size: 1.6rem
-
-.interests
-  font-size: 1.6rem
-
-.project-heading
-  font-family: "Lato"
-  font-weight: bold
-  font-size: 1.65rem
-
-.project-item
-  margin-bottom: 10px
-  cursor: pointer
-  display: flex
-  flex-direction: row-reverse
-  align-items: center
-  justify-content: center
-  overflow: hidden
-  transition: all 0.5s
-  border-radius: 5px
-  color: black
-  font-size: 1.6rem
-
-  &:hover,
-  &:focus
-    color: black
-    text-decoration: none
-
-  &:hover
-    background-color: rgba($color-gothic, 0.2)
-
-  &:visited
-    background-color: none
-
-.project-image
-  opacity: 0
-  padding-right: 0px
-
-  &.slide,
-  &.slide-right
-    opacity: 1
-
-#blog-content
-
-  #loading-spinner
-    font-size: 30px
-    display: inline-block
-    width: 50%
-    margin-left: 25%
-    text-align: center
-    font-size: 2.5rem
-    .letter
-      animation-name: loadingFade
-      animation-duration: 1.5s
-      animation-iteration-count: infinite
-      animation-direction: linear
-      display: inline-block
-    .l-1
-      animation-delay: 0.15s
-    .l-2
-      animation-delay: 0.3s
-    .l-3
-      animation-delay: 0.45s
-    .l-4
-      animation-delay: 0.6s
-    .l-5
-      animation-delay: 0.75s
-    .l-6
-      animation-delay: .9s
-    .l-7
-      animation-delay: 1.05s
-    .l-8
-      animation-delay: 1.2s
-    .l-9
-      animation-delay: 1.35s
-    .l-10
-      animation-delay: 1.5s
-
-  .error
-    .blog-titles,
-    .blog-descriptions
-      a
-        color: $color-fruit-salad
-
-.blog-posts
-  padding-top: 10px
-  padding-bottom: 10px
-  border-bottom: 1px solid gray
-  display: flex
-  flex-direction: row
-  align-items: center
-  color: black
-  &:hover,
-  &:visited
-    text-decoration: none
-    color: black
-
-  &.see-all
-    border: none
-    display: flex
-    justify-content: center
-    align-items: center
-
-.blog-thumbnail
-  border-radius: 5px
-
-.blog-titles
-  font-size: 2.5rem
-  margin-bottom: 0px
-  font-weight: 700
-  letter-spacing: -.25px
-
-.blog-subtitles
-  font-size: 16px
-  font-family: "Futura","Montserrat",Arial,sans-serif
-  font-weight: 300
-  margin-top: 5px
-  margin-bottom: 5px
-  letter-spacing: -.5px
-  color: rgba(0,0,0,.44)
-
-.blog-descriptions
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif
-  font-size: 18px
-  font-weight: 400
-  line-height: 1.25
-
-
-@media screen and (max-width: 991px)
-  body
-    padding-top: 0px
-    padding-left: 0px
-    padding-right: 0px
-
-  .header
-    padding-top: 15px
-
-  #app-container
-    position: relative
     overflow-x: hidden
 
-  .social-list
-    border-right: none
-    border-top: 1px solid gray
+img
+    max-width: 100%
+
+@keyframes fade-in
+    0%
+        opacity: 0
+
+    100%
+        opacity: 1
+
+@keyframes slide
+    0%
+        left: 100%
+
+    100%
+        left: 0
+
+@keyframes slideRight
+    0%
+        left: 0
+
+    100%
+        left: 100%
+
+@keyframes slideUp
+    0%
+        opacity: 0
+        transform: translate3d(0, 50%, 0)
+
+    100%
+        opacity: 1
+        transform: translate3d(0, 0, 0)
+
+@keyframes loadingFade
+    0%
+        opacity: 0
+
+    100%
+        opacity: 1
+
+.link
+    color: $color-fruit-salad
+    cursor: pointer
+
+    &:hover
+        color: $color-sea-green
+
+.slide
+    animation: slide 0.5s forwards
+
+.slide-right
+    animation: slideRight 0.5s forwards
+
+#blog-content
+    .error
+        .blog-titles,
+        .blog-descriptions
+            a
+                color: $color-fruit-salad
+
+.blog-posts
     padding-top: 10px
-    display: inline-block
-    width: 100%
+    padding-bottom: 10px
+    border-bottom: 1px solid gray
+    display: flex
+    flex-direction: row
+    align-items: center
+    color: black
 
-    .social-list-items
-      float: left
-      width: 16.5%
-      text-align: center
-      a
-        font-size: 1.25rem
-
-  #main-content
-    padding-left: 15px
-    padding-right: 15px
-
-  .project-item
     &:hover,
     &:visited
-      background-color: transparent
+        text-decoration: none
+        color: black
 
-  .project-image
-    opacity: 1
+    &.see-all
+        border: none
+        display: flex
+        justify-content: center
+        align-items: center
 
-  .blog-posts
-    display: inline-block
-    width: 50%
-    float: left
-    height: 400px
-    padding: 10px
-    border-bottom: none
-
-  .blog-thumbnail-container
-    max-height: 150px
-    overflow: hidden
+.blog-thumbnail
     border-radius: 5px
 
-  .blog-titles
-    font-size: 2rem
+.blog-titles
+    font-size: 2.5rem
+    margin-bottom: 0px
+    font-weight: 700
+    letter-spacing: -0.25px
+
+.blog-subtitles
+    font-size: 16px
+    font-family: "Futura", "Montserrat", Arial, sans-serif
+    font-weight: 300
+    margin-top: 5px
+    margin-bottom: 5px
+    letter-spacing: -0.5px
+    color: rgba(0, 0, 0, 0.44)
+
+.blog-descriptions
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
+    font-size: 18px
+    font-weight: 400
+    line-height: 1.25
+
+@media screen and (max-width: 991px)
+    body
+        padding-top: 0px
+        padding-left: 0px
+        padding-right: 0px
+
+    #app-container
+        position: relative
+        overflow-x: hidden
+
+    #main-content
+        padding-left: 15px
+        padding-right: 15px
+
+    .blog-posts
+        display: inline-block
+        width: 50%
+        float: left
+        height: 400px
+        padding: 10px
+        border-bottom: none
+
+    .blog-thumbnail-container
+        max-height: 150px
+        overflow: hidden
+        border-radius: 5px
+
+    .blog-titles
+        font-size: 2rem
 
 @media screen and (max-width: 736px)
-  .project-item
-    flex-direction: column
-    .project-image
-      max-height: 150px
-      overflow-y: hidden
-      display: flex
-      align-items: center
-      margin-bottom: 10px
-      margin-top: 10px
-      border-radius: 5px
-      padding-left: 0
+    #blog-content
+        #loading-spinner
+            width: 100%
+            margin: 0 auto
 
-  .ribbon
-    right: -60px
-    top: 10px
-    text-align: center
-    font-size: 1rem
-
-  .name
-    font-size: 1.25em
-    padding-left: 0px
-
-  #blog-content
-    #loading-spinner
-      width: 100%
-      margin: 0 auto
-
-  .blog-posts
-    display: block
-    width: 100%
-    height: auto
+    .blog-posts
+        display: block
+        width: 100%
+        height: auto
