--- a/app/styles/nightmode.css
+++ b/app/styles/nightmode.css
@@ -1,26 +1,37 @@
 body {
   background-color: #282c34;
-  color: #dddddd; }
+  color: #dddddd;
+}
 
 .social-list {
-  border-right: 1px solid white; }
-  .social-list .social-list-items a {
-    color: #dddddd; }
+  border-right: 1px solid white;
+}
+.social-list .social-list-items a {
+  color: #dddddd;
+}
 
 .project-item {
-  color: #dddddd; }
-  .project-item:hover, .project-item:focus {
-    color: #dddddd; }
+  color: #dddddd;
+}
+.project-item:hover,
+.project-item:focus {
+  color: #dddddd;
+}
 
 #loading-spinner {
-  color: #dddddd; }
+  color: #dddddd;
+}
 
 .blog-posts {
-  color: white; }
-  .blog-posts:hover, .blog-posts:visited {
-    color: white; }
+  color: white;
+}
+.blog-posts:hover,
+.blog-posts:visited {
+  color: white;
+}
 
 .blog-subtitles {
-  color: #dddddd; }
+  color: #dddddd;
+}
 
 /*# sourceMappingURL=nightmode.css.map */
